--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/react": "^2.0.3",
+    "@tailwindcss/vite": "^4.0.8",
     "@types/sinon": "^17.0.3",
     "@vinejs/vine": "^3.0.0",
     "edge.js": "^6.2.1",
@@ -73,7 +74,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
-    "sinon": "^19.0.2"
+    "sinon": "^19.0.2",
+    "tailwindcss": "^4.0.8"
   },
   "hotHook": {
     "boundaries": [
