--- a/systemd-services/chiroptera.service
+++ b/systemd-services/chiroptera.service
@@ -8,7 +8,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User=root
-ExecStart=/usr/bin/env node /root/chiroptera/build/bin/server.js
+ExecStart=/root/.nvm/versions/node/v22.14.0/bin node /root/chiroptera/build/bin/server.js
 
 [Install]
 WantedBy=multi-user.target
