--- a/systemd-services/chiroptera.service
+++ b/systemd-services/chiroptera.service
@@ -9,6 +9,7 @@ Restart=always
 RestartSec=1
 User=root
 ExecStart=/root/.nvm/versions/node/v22.14.0/bin/node /root/chiroptera/build/bin/server.js
+StandardOutput=journal+console
 
 [Install]
 WantedBy=multi-user.target
