--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/sinon": "^17.0.3",
     "@vinejs/vine": "^3.0.0",
     "edge.js": "^6.2.1",
+    "formik": "^2.4.6",
     "luxon": "^3.5.0",
     "pg": "^8.13.3",
     "react": "^19.0.0",
